// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarGlobalNav when window width is above mobileBreakpoint styles should render brown navbar global nav by default 1`] = `
.c1 {
  background: transparent;
  border: none;
  cursor: inherit;
  display: inline-block;
  padding: 0 25px 7px 0;
}

.c2 {
  height: 3px;
  position: absolute;
  width: 25px;
  background-color: #FFFFFF;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: .22s;
  transition-duration: .22s;
  -webkit-transition-timing-function: cubic-bezier(0.55,0.055,0.675,0.19);
  transition-timing-function: cubic-bezier(0.55,0.055,0.675,0.19);
}

.c2.c2:before {
  height: 3px;
  position: absolute;
  width: 25px;
  background-color: #FFFFFF;
  content: "";
  display: block;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: .15s;
  transition-duration: .15s;
  -webkit-transition: top 0.1s 0.25s ease-in,opacity 0.1s ease-in;
  transition: top 0.1s 0.25s ease-in,opacity 0.1s ease-in;
  top: -7px;
}

.c2.c2:after {
  height: 3px;
  position: absolute;
  width: 25px;
  background-color: #FFFFFF;
  content: "";
  display: block;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: .15s;
  transition-duration: .15s;
  -webkit-transition: bottom 0.1s 0.25s ease-in,-webkit-transform 0.22s cubic-bezier(0.55,0.055,0.675,0.19);
  -webkit-transition: bottom 0.1s 0.25s ease-in,transform 0.22s cubic-bezier(0.55,0.055,0.675,0.19);
  transition: bottom 0.1s 0.25s ease-in,transform 0.22s cubic-bezier(0.55,0.055,0.675,0.19);
  bottom: -7px;
}

.c8 {
  display: list-item;
  border-top: 0.5px solid #C8C8C880;
  padding: 1rem 0;
}

.c9 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.c9:hover {
  color: #CCC6B8;
}

.c10 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #CCC6B8;
  cursor: pointer;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.c10:hover {
  color: #CCC6B8;
}

.c11 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #FFFFFF;
  cursor: not-allowed;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.c11:hover {
  color: #FFFFFF;
}

.c7 {
  list-style: none;
  margin: 0;
  background-color: transparent;
  display: block;
  padding: 0;
  width: 100%;
}

.c5 {
  will-change: height;
  display: none;
  height: 0;
  overflow: hidden;
  -webkit-transition: height 250ms cubic-bezier(0.4,0,0.2,1);
  transition: height 250ms cubic-bezier(0.4,0,0.2,1);
}

.c0 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  font-size: 1em;
  padding: 0;
}

.c3 {
  color: #FFFFFF;
  font-family: CircularStdBold,CircularStd,Arial,Helvetica,sans-serif;
  font-weight: bold;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  margin-left: 10px;
  text-transform: uppercase;
}

.c4 {
  box-shadow: 0 5px 10px 0 #00000026;
  left: 0;
  position: absolute;
  top: 75px;
  width: 100%;
  background-color: #4E3629;
}

.c6 {
  padding: 0 7vw 1rem;
}

@media (min-width:740px) {
  .c6 {
    padding: 0 33px 1rem 33px;
  }
}

<div>
  <button
    aria-controls="navbar-global-nav-collapse"
    aria-expanded="false"
    aria-label="Toggle global navigation"
    class="c0"
    type="button"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      />
    </div>
    <span
      class="c3"
    >
      Global Navigation
    </span>
  </button>
  <div
    class="c4"
  >
    <div
      class="c5"
      display="none"
      height="0"
      id="navbar-global-nav-collapse"
      overflow="hidden"
    >
      <div
        class="c6"
      >
        <ul
          class="c7"
        >
          <li
            class="c8"
          >
            <button
              class="c9"
            >
              Link
            </button>
          </li>
          <li
            class="c8"
          >
            <button
              class="c10"
            >
              Active Link
            </button>
          </li>
          <li
            class="c8"
          >
            <button
              class="c11"
              disabled=""
            >
              Link
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`NavbarGlobalNav when window width is below mobileBreakpoint styles should render brown mobile navbar global nav by default 1`] = `
.c1 {
  background: transparent;
  border: none;
  cursor: inherit;
  display: inline-block;
  padding: 0 25px 7px 0;
}

.c2 {
  height: 3px;
  position: absolute;
  width: 25px;
  background-color: #FFFFFF;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: .22s;
  transition-duration: .22s;
  -webkit-transition-timing-function: cubic-bezier(0.55,0.055,0.675,0.19);
  transition-timing-function: cubic-bezier(0.55,0.055,0.675,0.19);
}

.c2.c2:before {
  height: 3px;
  position: absolute;
  width: 25px;
  background-color: #FFFFFF;
  content: "";
  display: block;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: .15s;
  transition-duration: .15s;
  -webkit-transition: top 0.1s 0.25s ease-in,opacity 0.1s ease-in;
  transition: top 0.1s 0.25s ease-in,opacity 0.1s ease-in;
  top: -7px;
}

.c2.c2:after {
  height: 3px;
  position: absolute;
  width: 25px;
  background-color: #FFFFFF;
  content: "";
  display: block;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-duration: .15s;
  transition-duration: .15s;
  -webkit-transition: bottom 0.1s 0.25s ease-in,-webkit-transform 0.22s cubic-bezier(0.55,0.055,0.675,0.19);
  -webkit-transition: bottom 0.1s 0.25s ease-in,transform 0.22s cubic-bezier(0.55,0.055,0.675,0.19);
  transition: bottom 0.1s 0.25s ease-in,transform 0.22s cubic-bezier(0.55,0.055,0.675,0.19);
  bottom: -7px;
}

.c7 {
  display: list-item;
  border-top: 0.5px solid #C8C8C880;
  padding: 1rem 0;
}

.c8 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.c8:hover {
  color: #CCC6B8;
}

.c9 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #CCC6B8;
  cursor: pointer;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.c9:hover {
  color: #CCC6B8;
}

.c10 {
  background: transparent;
  border: none;
  display: block;
  font-family: CircularStd,Arial,Helvetica,sans-serif;
  padding: 0;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  color: #FFFFFF;
  cursor: not-allowed;
  font-size: 1em;
  font-weight: 700;
  line-height: 1.5;
  opacity: 1;
  pointer-events: auto;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.c10:hover {
  color: #FFFFFF;
}

.c6 {
  list-style: none;
  margin: 0;
  background-color: transparent;
  display: block;
  padding: 0;
  width: 100%;
}

.c4 {
  will-change: height;
  display: none;
  height: 0;
  overflow: hidden;
  -webkit-transition: height 250ms cubic-bezier(0.4,0,0.2,1);
  transition: height 250ms cubic-bezier(0.4,0,0.2,1);
}

.c0 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  font-size: 1em;
  padding: 0;
}

.c3 {
  box-shadow: 0 5px 10px 0 #00000026;
  left: 0;
  position: absolute;
  top: 75px;
  width: 100%;
  background-color: #4E3629;
}

.c5 {
  padding: 0 7vw 1rem;
}

@media (min-width:740px) {
  .c5 {
    padding: 0 33px 1rem 33px;
  }
}

<div>
  <button
    aria-controls="navbar-global-nav-collapse"
    aria-expanded="false"
    aria-label="Toggle global navigation"
    class="c0"
    type="button"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      />
    </div>
  </button>
  <div
    class="c3"
  >
    <div
      class="c4"
      display="none"
      height="0"
      id="navbar-global-nav-collapse"
      overflow="hidden"
    >
      <div
        class="c5"
      >
        <ul
          class="c6"
        >
          <li
            class="c7"
          >
            <button
              class="c8"
            >
              Link
            </button>
          </li>
          <li
            class="c7"
          >
            <button
              class="c9"
            >
              Active Link
            </button>
          </li>
          <li
            class="c7"
          >
            <button
              class="c10"
              disabled=""
            >
              Link
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
